--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -1,10 +1,10 @@
 ---
 layout: archive
 permalink: /
-title: "Blog posts"
+title: "Blog"
 author_profile: true
 redirect_from:
-  - /wordpress/blog-posts/
+  - /blog/
 ---
 
 {% include base_path %}
